--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next dev",
+    "start-prod": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/web3": "^1.2.2",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "web3": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
